feat: custom keybindings and repetition speed configs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
         "dotfiles",
         "matiascaniete",
         "neofetch",
-        "nvim"
+        "nvim",
+        "sxhkd",
+        "xinit",
+        "xinitrc"
     ]
 }
