feat: reboot menu

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,21 @@
 {
     "cSpell.words": [
+        "SIGUSR",
         "alacritty",
         "combi",
         "dotfiles",
         "drun",
+        "killall",
         "matiascaniete",
         "neofetch",
         "nvim",
+        "pkill",
+        "poweroff",
         "rofi",
         "sxhkd",
         "xinit",
         "xinitrc",
+        "xsit",
         "zenity"
     ]
 }
