feat: config updated notification

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "SIGUSR",
         "alacritty",
         "combi",
+        "dmenu",
         "dotfiles",
         "drun",
         "killall",
@@ -13,6 +14,7 @@
         "poweroff",
         "rofi",
         "sxhkd",
+        "xargs",
         "xinit",
         "xinitrc",
         "xsit",
