feat: hot keys updated

--- a/sxhkd/.config/autostart/sxhkd.desktop
+++ b/sxhkd/.config/autostart/sxhkd.desktop
@@ -1,6 +1,8 @@
 [Desktop Entry]
+
 Name=sxhkd
 Comment=Simple X hotkey daemon
 Exec=/usr/bin/sxhkd
 Terminal=false
 Type=Application
+X-GNOME-Autostart-enabled=true
