feat: rofi config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
     "cSpell.words": [
+        "Papirus",
         "SIGUSR",
         "alacritty",
         "combi",
         "dmenu",
         "dotfiles",
         "drun",
+        "fullscreen",
         "killall",
         "matiascaniete",
         "neofetch",
