fix: rofi size font autoajusted

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,12 +8,14 @@
         "dotfiles",
         "drun",
         "fullscreen",
+        "gruvbox",
         "killall",
         "matiascaniete",
         "neofetch",
         "nvim",
         "pkill",
         "poweroff",
+        "rasi",
         "rofi",
         "sxhkd",
         "xargs",
