feat: lastpass rofi/fzf selector

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "fullscreen",
         "gruvbox",
         "killall",
+        "lpass",
         "matiascaniete",
         "neofetch",
         "nvim",
