--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,10 @@
         "fullscreen",
         "gruvbox",
         "killall",
+        "ktorrent",
+        "librewolf",
         "lpass",
+        "mailspring",
         "matiascaniete",
         "neofetch",
         "nvim",
