feat: bat configs

--- a/shell/.custom_zshrc
+++ b/shell/.custom_zshrc
@@ -1,6 +1,7 @@
 #!/usr/bin/env bash
 
 export EDITOR=nvim
+export VISUAL=nvim
 export PAGER=bat
 export BAT_PAGER=less
 export HIST_STAMPS="yyyy-mm-dd"
