--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -42,10 +42,23 @@
     ],
     "coc.preferences.formatOnSaveFiletypes": [
         "css",
-        "sh",
+        "javascript",
+        "json",
         "markdown",
         "php",
-        "json"
+        "sh",
+        "typescript",
+        "vue"
+    ],
+    "coc.preferences.formatOnTypeFiletypes": [
+        "css",
+        "javascript",
+        "json",
+        "markdown",
+        "php",
+        "sh",
+        "typescript",
+        "vue"
     ],
     "coc.preferences.formatOnType": true
 }
