new cSpell words

--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -1,9 +1,10 @@
 {
-  "cSpell.words": [
-    "dotfiles",
-    "matiascaniete",
-    "xinitrc",
-    "ytdla",
-    "ytdlv"
-  ]
+    "cSpell.words": [
+        "dotfiles",
+        "matiascaniete",
+        "xinitrc",
+        "ytdla",
+        "ytdlv"
+    ],
+    "vetur.trace.server": "verbose"
 }
