--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -24,6 +24,7 @@
   #TERM: alacritty
 
 window:
+  opacity: 1
   # Window dimensions (changes require restart)
   #
   # Number of lines/columns (not pixels) in the terminal. The number of columns
@@ -111,7 +112,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: "JetBrains Mono"
+    family: "JetBrains Mono NL"
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -122,7 +123,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "JetBrains Mono"
+    family: "JetBrains Mono NL"
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -133,7 +134,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "JetBrains Mono"
+    family: "JetBrains Mono NL"
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -144,7 +145,7 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "JetBrains Mono"
+    family: "JetBrains Mono NL"
 
     # The `style` can be specified to pick a specific face.
     style: Bold Italic
@@ -391,7 +392,8 @@ bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 1
+# background_opacity: 1
+
 
 #selection:
   # This string contains all characters that are used as separators for
