--- a/shell/.custom_zshrc
+++ b/shell/.custom_zshrc
@@ -17,3 +17,29 @@ source ~/.antigen_custom
 # antigen autocompletion issue workaround, but slows down shell starting time
 autoload -U +X bashcompinit && bashcompinit
 autoload -U +X compinit && compinit
+
+# zstyle ':completion:*' verbose yes
+# zstyle ':completion:*' menu select
+# zstyle ':completion:*:*:*:*:descriptions' format '%F{green}-- %d --%f'
+# zstyle ':completion:*:*:*:*:corrections' format '%F{yellow}!- %d (errors: %e) -!%f'
+# zstyle ':completion:*:messages' format ' %F{purple} -- %d --%f'
+# zstyle ':completion:*:warnings' format ' %F{red}-- no matches found --%f'
+# zstyle ':completion:*:*:-command-:*:*' group-order alias builtins functions commands
+
+# disable sort when completing `git checkout`
+zstyle ':completion:*:git-checkout:*' sort false
+
+# set descriptions format to enable group support
+zstyle ':completion:*:descriptions' format '[%d]'
+
+# switch group using `,` and `.`
+zstyle ':fzf-tab:*' switch-group ',' '.'
+zstyle ':fzf-tab:*' show-group full
+
+# this is an example
+zstyle ':fzf-tab:complete:(\\|)run-help:*' fzf-preview 'run-help $word'
+zstyle ':fzf-tab:complete:(\\|*/|)man:*' fzf-preview 'man $word'
+
+# preview directory's content with exa when completing cd
+zstyle ':fzf-tab:complete:cd:*' fzf-preview 'ls -1 --color=always $realpath' # remember to use single quote here!!!
+zstyle ':fzf-tab:complete:*:*' fzf-preview 'bat --color=always ${(Q)realpath}'
