--- a/shell/.custom_zshrc
+++ b/shell/.custom_zshrc
@@ -29,7 +29,7 @@ autoload -U +X compinit && compinit
 # disable sort when completing `git checkout`
 zstyle ':completion:*:git-checkout:*' sort false
 
-# set descriptions format to enable group support
+# # set descriptions format to enable group support
 zstyle ':completion:*:descriptions' format '[%d]'
 
 # switch group using `,` and `.`
@@ -42,4 +42,4 @@ zstyle ':fzf-tab:complete:(\\|*/|)man:*' fzf-preview 'man $word'
 
 # preview directory's content with exa when completing cd
 zstyle ':fzf-tab:complete:cd:*' fzf-preview 'ls -1 --color=always $realpath' # remember to use single quote here!!!
-zstyle ':fzf-tab:complete:*:*' fzf-preview 'bat --color=always ${(Q)realpath}'
+# zstyle ':fzf-tab:complete:*:*' fzf-preview 'bat --color=always ${(Q)realpath}'
