feat(nnn): nnn configs

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -741,7 +741,7 @@
 #: }}}
 
 #: Color scheme {{{
-
+include ~/.config/kitty/themes/kitty-gruvbox-theme/gruvbox_dark_hard.conf
 # foreground #dddddd
 # background #000000
 
