--- a/shell/.custom_zshrc
+++ b/shell/.custom_zshrc
@@ -8,6 +8,11 @@ export HIST_STAMPS="yyyy-mm-dd"
 export TERMINAL=alacritty
 # export PATH="$PATH:/home/$USER/bin"
 
+export NNN_PLUG='o:fzopen;m:nmount;x:!chmod +x $nnn;p:preview-tui'
+export NNN_FIFO=/tmp/nnn.fifo
+export NNN_OPENER=nuke
+export NNN_OPTS=c
+export PATH=$PATH:${XDG_CONFIG_HOME:-$HOME/.config}/nnn/plugins
 # shellcheck disable=SC1090
 source ~/.bash_aliases
 
