feat(kitty): kitty config

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      monospace
+font_family JetBrainsMono Nerd Font Mono
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -23,7 +23,7 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-# font_size 11.0
+font_size 10.0
 
 #: Font size (in pts)
 
@@ -174,13 +174,13 @@
 #: with the background color of the cell underneath instead, use the
 #: special keyword: background
 
-# cursor_shape block
+# cursor_shape underline
 
 #: The cursor shape can be one of (block, beam, underline). Note that
 #: when reloading the config this will be changed only if the cursor
 #: shape has not been set by the program running in the terminal.
 
-# cursor_beam_thickness 1.5
+cursor_beam_thickness 1
 
 #: Defines the thickness of the beam cursor (in pts)
 
@@ -188,7 +188,7 @@
 
 #: Defines the thickness of the underline cursor (in pts)
 
-# cursor_blink_interval -1
+cursor_blink_interval 0.15
 
 #: The interval (in seconds) at which to blink the cursor. Set to zero
 #: to disable blinking. Negative values mean use system default. Note
@@ -269,8 +269,8 @@
 #: robustly with the ever-changing sea of bugs that is Cocoa is too
 #: much effort.
 
-# url_color #0087bd
-# url_style curly
+url_color #0087bd
+url_style single
 
 #: The color and style for highlighting URLs on mouse-over. url_style
 #: can be one of: none, single, double, curly
