fix(starship): starship config fixed

--- a/starship/.config/starship/starship.toml
+++ b/starship/.config/starship/starship.toml
@@ -1,5 +1,5 @@
 add_newline = false
-format = "$username@$hostname$directory$git_branch$git_state$status${custom.erp}$cmd_duration>"
+format = "$username@$hostname$directory$git_branch$git_status$status${custom.erp}$cmd_duration$jobs$character"
 right_format = "${battery}"
 
 [custom.erp]
@@ -52,15 +52,9 @@ format = "[$branch]($style)"
 style = "bright-black"
 
 [git_status]
-format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
+# format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
+format = '([\[$all_status$ahead_behind\]]($style) )'
 style = "cyan"
-conflicted = "​"
-untracked = "​"
-modified = "​"
-staged = "​"
-renamed = "​"
-deleted = "​"
-stashed = "≡"
 
 [git_state]
 format = '\([$state( $progress_current/$progress_total)]($style)\)'
