--- a/starship/.config/starship/starship.toml
+++ b/starship/.config/starship/starship.toml
@@ -1,5 +1,5 @@
 add_newline = false
-format = "$username $directory $git_branch$git_status${custom.erp}$cmd_duration$jobs$status$character"
+format = "$username$directory$git_branch$git_status${custom.erp}$cmd_duration$jobs$status$character"
 right_format = "${battery}$memory_usage$hostname$time"
 
 [time]
@@ -7,6 +7,10 @@ disabled = false
 format = ' [$time]($style)'
 time_format = '%T'
 style = "yellow"
+
+[jobs]
+symbol = ""
+format = " [$symbol$number]($style)"
 
 [memory_usage]
 disabled = false
@@ -23,9 +27,9 @@ when = '[[ $PWD =~ erp ]]'
 format = '\[servers:[$output]($style)\]'
 
 [battery]
-full_symbol = '🔋'
-charging_symbol = '⚡️'
-discharging_symbol = '💀'
+full_symbol = ''
+charging_symbol = ''
+discharging_symbol = ''
 format = '[$symbol $percentage]($style)'
 
 [[battery.display]]
@@ -33,14 +37,15 @@ threshold = 50
 
 [status]
 symbol = ""
-format = '[\[$int:$symbol$common_meaning$signal_name$maybe_int\]]($style)'
+style = "red"
+format = ' [\[$int:$symbol$common_meaning$signal_name$maybe_int!\]]($style)'
 map_symbol = false
 disabled = false
 
 [username]
 style_user = 'white bold'
 style_root = 'black bold'
-format = '[$user]($style)'
+format = '[$user]($style) '
 disabled = false
 show_always = true
 
@@ -53,7 +58,7 @@ disabled = false
 style = "blue"
 truncation_symbol = './'
 truncation_length = 2
-format = '[$path]($style)[$read_only]($read_only_style)'
+format = '[$path]($style)[$read_only]($read_only_style) '
 
 [character]
 success_symbol = "[❯](purple)"
@@ -74,9 +79,5 @@ format = '\([$state($progress_current/$progress_total)]($style)\)'
 style = "bright-black"
 
 [cmd_duration]
-format = "[$duration]($style)"
+format = "[$duration]($style) "
 style = "yellow"
-
-[python]
-format = "[$virtualenv]($style)"
-style = "bright-black"
