--- a/starship/.config/starship/starship.toml
+++ b/starship/.config/starship/starship.toml
@@ -24,16 +24,22 @@ command = 'erp servers | tr "\n" " "' # shows output of command
 # detect_folders = ['erp4'] # can specify filters but wildcards are not supported
 when = '[[ $PWD =~ erp ]]'
 # when = ''' true '''
-format = ' [{ srvs:[$output](green) }](dimmed white)'
+format = ' [{srvs:[$output](green)}](dimmed white)'
 
 [battery]
 full_symbol = ''
 charging_symbol = ''
 discharging_symbol = ''
-format = '[$symbol $percentage]($style)'
+format = '[$symbol $percentage]($style) '
 
 [[battery.display]]
 threshold = 50
+style = "bold yellow"
+
+[[battery.display]]
+threshold = 25
+style = "bold red"
+
 
 [status]
 symbol = "𥉉"
