--- a/starship/.config/starship/starship.toml
+++ b/starship/.config/starship/starship.toml
@@ -49,7 +49,7 @@ map_symbol = false
 disabled = false
 
 [username]
-style_user = '#E3F2F1'
+style_user = 'cyan'
 style_root = 'red'
 format = '[$user]($style)'
 disabled = false
@@ -58,7 +58,7 @@ show_always = true
 [hostname]
 ssh_only = false
 ssh_symbol = ""
-format = '[@](#E3F2F1)[$hostname](blue)'
+format = '[@](gray)[$hostname](purple)'
 disabled = false
 
 [directory]
