--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -30,9 +30,9 @@ window:
   # Number of lines/columns (not pixels) in the terminal. The number of columns
   # must be at least `2`, while using a value of `0` for columns and lines will
   # fall back to the window manager's recommended size.
-  #dimensions:
-  #  columns: 0
-  #  lines: 0
+  dimensions:
+   columns: 160
+   lines: 40
 
   # Window position (changes require restart)
   #
@@ -92,15 +92,15 @@ window:
   #
   # Override the variant of the GTK theme. Commonly supported values are `dark`
   # and `light`. Set this to `None` to use the default theme variant.
-  #gtk_theme_variant: None
+  gtk_theme_variant: dark
 
-#scrolling:
+scrolling:
   # Maximum number of lines in the scrollback buffer.
   # Specifying '0' will disable scrolling.
   #history: 10000
 
   # Scrolling distance multiplier.
-  #multiplier: 3
+  multiplier: 10
 
 # Font configuration
 font:
@@ -182,7 +182,7 @@ colors:
   primary:
     # hard contrast: background = '#1d2021'
     # background: '#282828'
-    background: '#1d2021'
+    background: '#000000'
     # soft contrast: background = '#32302f'
     foreground: '#ebdbb2'
 
@@ -231,9 +231,9 @@ colors:
   #
   # Allowed values are CellForeground/CellBackground, which reference the
   # affected cell, or hexadecimal colors like #ff00ff.
-  #cursor:
-  #  text: CellBackground
-  #  cursor: CellForeground
+  cursor:
+   # text: CellBackground
+   cursor: '#ffffff'
 
   # Vi mode cursor colors
   #
@@ -369,10 +369,10 @@ bell:
 
   # Duration of the visual bell flash in milliseconds. A `duration` of `0` will
   # disable the visual bell animation.
-  duration: 50
+  duration: 100
 
   # Visual bell animation color.
-  color: '#666666'
+  color: '#ffffff'
 
   # Bell Command
   #
@@ -392,7 +392,7 @@ bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-# background_opacity: 1
+background_opacity: 0.95
 
 
 #selection:
@@ -412,7 +412,7 @@ cursor:
     #   - ▇ Block
     #   - _ Underline
     #   - | Beam
-    shape: Underline
+    shape: Beam
 
     # Cursor blinking state
     #
@@ -432,7 +432,7 @@ cursor:
   #vi_mode_style: None
 
   # Cursor blinking interval in milliseconds.
-  blink_interval: 250
+  blink_interval: 500
 
   # If this is `true`, the cursor will be rendered as a hollow box when the
   # window is not focused.
@@ -440,7 +440,7 @@ cursor:
 
   # Thickness of the cursor relative to the cell width as floating point number
   # from `0.0` to `1.0`.
-  thickness: 0.15
+  thickness: 0.1
 
 # Live config reload (changes require restart)
 live_config_reload: true
@@ -755,7 +755,8 @@ hints:
 #
 # If the same trigger is assigned to multiple actions, all of them are executed
 # in the order they were defined in.
-#key_bindings:
+key_bindings:
+  - { key: F11, action: ToggleFullscreen }
   #- { key: Paste,                                       action: Paste          }
   #- { key: Copy,                                        action: Copy           }
   #- { key: L,         mods: Control,                    action: ClearLogNotice }
