--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -741,7 +741,9 @@ window_padding_width 0
 #: }}}
 
 #: Color scheme {{{
-include ~/.config/kitty/themes/kitty-gruvbox-theme/gruvbox_dark_hard.conf
+# include ~/.config/kitty/themes/kitty-gruvbox-theme/gruvbox_dark_hard.conf
+include ~/.config/kitty/themes/catpuccin/mocha.conf
+
 # foreground #dddddd
 # background #000000
 
