--- a/tmux2/.config/tmux/tmux.conf
+++ b/tmux2/.config/tmux/tmux.conf
@@ -50,3 +50,9 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
+# resize panes
+bind -r H resize-pane -L 1
+bind -r J resize-pane -D 1
+bind -r K resize-pane -U 1
+bind -r L resize-pane -R 1
