--- a/tmux2/.config/tmux/tmux.conf
+++ b/tmux2/.config/tmux/tmux.conf
@@ -56,3 +56,8 @@ bind -r H resize-pane -L 1
 bind -r J resize-pane -D 1
 bind -r K resize-pane -U 1
 bind -r L resize-pane -R 1
+
+# force a reload of the config file
+unbind r
+bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded tmux config!"
+
