--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -66,19 +66,20 @@ cscale=bilinear
 [highfi]
 
 glsl-shaders-clr
-glsl-shaders="~/.config/mpv/shaders/noise_static_luma.hook"
-glsl-shaders-append="~/.config/mpv/shaders/noise_static_chroma.hook"
+# glsl-shaders="~/.config/mpv/shaders/noise_static_luma.hook"
+# glsl-shaders-append="~/.config/mpv/shaders/noise_static_chroma.hook"
 glsl-shaders-append="~/.config/mpv/shaders/filmgrain.hook"
 glsl-shaders-append="~/.config/mpv/shaders/SSimSuperRes.glsl"
-glsl-shaders-append="~/.config/mpv/shaders/adaptive-sharpen.glsl"
+# glsl-shaders-append="~/.config/mpv/shaders/adaptive-sharpen.glsl"
+# glsl-shaders-append="~/.config/mpv/shaders/FSRCNNX_x2_16-0-4-1.glsl"
 sigmoid-upscaling
 
 # prevents random crashes by disable vulkan
 # gpu-api=vulkan
-vulkan-async-compute=yes
-vulkan-async-transfer=yes
-vulkan-queue-count=1
-vd-lavc-dr=yes
+# vulkan-async-compute=yes
+# vulkan-async-transfer=yes
+# vulkan-queue-count=1
+# vd-lavc-dr=yes
 
 scale=ewa_lanczossharp
 dscale=mitchell
