--- a/configs/alacritty/.config/alacritty/alacritty.toml
+++ b/configs/alacritty/.config/alacritty/alacritty.toml
@@ -41,19 +41,19 @@ blinking = "Always"
 shape = "Beam"
 
 [font.bold]
-family = "JetBrainsMono Nerd Font Mono"
+family = "JetBrainsMono Nerd Font"
 style = "Bold"
 
 [font.bold_italic]
-family = "JetBrainsMono Nerd Font Mono"
+family = "JetBrainsMono Nerd Font"
 style = "Bold Italic"
 
 [font.italic]
-family = "JetBrainsMono Nerd Font Mono"
+family = "JetBrainsMono Nerd Font"
 style = "Italic"
 
 [font.normal]
-family = "JetBrainsMono Nerd Font Mono"
+family = "JetBrainsMono Nerd Font"
 
 [[hints.enabled]]
 command = "xdg-open"
