--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ configs/zsh/.config/zsh/.zcompdump
 configs/mpv/.config/mpv/shaders
 configs/tmux2/.config/tmux/plugins
 configs/nvchad-2.5/.config/nvim/lazy-lock.json
+
+zsh/.config/zsh/.zhistory
+zsh/.config/zsh/.zshrc
+nvim/.config/nvim/plugin/packer_compiled.lua
