--- a/configs/alacritty/.config/alacritty/alacritty.toml
+++ b/configs/alacritty/.config/alacritty/alacritty.toml
@@ -33,7 +33,8 @@ background = "#000000"
 foreground = "#ebdbb2"
 
 [cursor]
-blink_interval = 500
+blink_interval = 200
+blink_timeout = 255
 thickness = 0.1
 
 [cursor.style]
@@ -72,15 +73,19 @@ mods = "None"
 action = "ToggleFullscreen"
 key = "F11"
 
+[mouse]
+hide_when_typing = true
+
 [scrolling]
 multiplier = 10
 
 [window]
-decorations = "full"
+decorations = "none"
 decorations_theme_variant = "Dark"
 dynamic_padding = true
 dynamic_title = true
-opacity = 0.97
+opacity = 0.85
+blur = true
 startup_mode = "Maximized"
 
 [window.dimensions]
@@ -88,5 +93,5 @@ columns = 160
 lines = 40
 
 [window.padding]
-x = 0
-y = 0
+x = 10
+y = 10
