--- a/configs/tmux2/.config/tmux/tmux.conf
+++ b/configs/tmux2/.config/tmux/tmux.conf
@@ -31,12 +31,24 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 
-set -g @catppuccin_flavour 'mocha'
+set -g @catppuccin_flavor "frappe"
+set -g @catppuccin_window_status_style "slanted"
+
+# leave this unset to let applications set the window title
+set -g @catppuccin_window_default_text " #W"
+set -g @catppuccin_window_current_text " #W"
+set -g @catppuccin_window_status "icon"
+set -g @catppuccin_window_current_background "#{@thm_mauve}"
+
+# Make the status line pretty and add some modules
+set -g status-right ""
+# set -g status-right "#{E:@catppuccin_status_user}"
+# set -ag status-right "#{E:@catppuccin_status_directory}"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 run '~/.tmux/plugins/tpm/tpm'
@@ -57,7 +69,11 @@ bind -r J resize-pane -D 1
 bind -r K resize-pane -U 1
 bind -r L resize-pane -R 1
 
+# sets the background color to default
+set -g status-bg default
+set -g status-style bg=default
+
 # force a reload of the config file
 unbind r
-bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded tmux config!"
+bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded tmux configuration!"
 
