--- a/configs/alacritty/.config/alacritty/alacritty.toml
+++ b/configs/alacritty/.config/alacritty/alacritty.toml
@@ -104,12 +104,12 @@ dynamic_padding = true
 dynamic_title = true
 opacity = 0.85
 blur = true
-startup_mode = "Maximized"
+startup_mode = "Fullscreen"
 
 [window.dimensions]
 columns = 160
 lines = 40
 
 [window.padding]
-x = 10
-y = 10
+x = 20
+y = 20
